objects/JunoDoc__Junodoc_Setting__c/JunoDoc__Junodoc_Setting__c.object-meta.xml
<CustomObject>
    <label>Junodoc Setting</label>
    <nameField>
        <displayFormat>JS-{0000}</displayFormat>
        <label>Junodoc Setting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Junodoc Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>