objects/JunoDoc__Junodoc_Setting__c/fields/JunoDoc__Community_URL__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Community_URL__c</fullName>
    <label>Community URL</label>
    <type>Url</type>
</CustomField>