objects/JunoDoc__Junodoc_Setting__c/fields/JunoDoc__Enable_JunoSign__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Enable_JunoSign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable JunoSign</label>
    <type>Checkbox</type>
</CustomField>