objects/JunoDoc__Junodoc_Setting__c/fields/JunoDoc__Signature_Cancel_Message__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Signature_Cancel_Message__c</fullName>
    <label>Signature Cancel Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>