objects/JunoDoc__Junodoc_Setting__c/fields/JunoDoc__Site_URL__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Site_URL__c</fullName>
    <label>Site URL</label>
    <type>Url</type>
</CustomField>